# data-juicer-openlineage

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data_juicer_openlineage/: __init__.py  builder.py  facets.py  provider.py  transport.py
data_juicer_openlineage/schemas/: DataJuicerOperatorJobFacet.json  DataJuicerPipelineJobFacet.json  DataJuicerRunFacet.json
tests/: test_builder.py  test_provider.py  test_transport.py
