[project]
name = "data-juicer-openlineage"
version = "0.1.0"
description = "OpenLineage metadata provider plugin for py-data-juicer."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Dludora"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    "py-data-juicer>=0.7.0",
    "openlineage-python>=1.30.0",
    "attrs",
]

[project.urls]
homepage = "https://github.com/Dludora/data-juicer-openlineage"
repository = "https://github.com/Dludora/data-juicer-openlineage"
issues = "https://github.com/Dludora/data-juicer-openlineage/issues"

[project.entry-points."data_juicer.metadata_providers"]
openlineage = "data_juicer_openlineage.provider:OpenLineageProvider"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_juicer_openlineage"]

[tool.hatch.build]
include = [
    "data_juicer_openlineage/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
